# rag_chat

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  pyproject.toml
.github/: dependabot.yml
src/: cli_local.py  serve_app.py
src/db/: create_db.py
src/models/: retrieval_chain.py
src/utils/: data_utils.py  logger.py
