[tool.poetry]
name = "rag_chat"
version = "0.1.0"
description = "AI Chatbot with retrieval-augmented generation (RAG) functionality."
authors = ["varlamnet"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.37.6"
langchain-aws = "^1.4.3"
langchain-chroma = "^1.1.0"
gradio = "^6.11.0"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ipykernel = "^7.2.0"
langchain-community = "^0.3.31"
pypdf = "^6.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
